--- a/Presentation Slides.Rmd
+++ b/Presentation Slides.Rmd
@@ -58,11 +58,16 @@ new_filtered_test <- read.csv('new.filtered.test.csv')
 
 - **Zillow Observed Rent Index** _(ZORI)_
   - Mean of listed rents that fall into the 35th to 65th percentile range for all homes and apartments in a given region.
+  
+
+<img src="Zillow_Wordmark_Blue_RGB lrg.png" width="25%" style="display: block; margin: auto;" />
 
 ## Historical Wins by Year by MLB Team
 
 - Pulled from **Lahman Baseball Database** using r package "Lahman".
-- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.]
+- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.
+
+<img src="SABR_logo-square-700px.png" width="15%" style="display: block; margin: auto;" />
 
 ---
 
@@ -124,13 +129,17 @@ new_filtered_test %>%
 ]
 ---
 
-# Results varied significantly from team to team. 
+# Some key takeaways 
 
-.pull-left[- Limited availability of zip code specific rent price data makes granular evaluation difficult, but team-level data shows interesting trends.
+.pull-left[
+- Rent price as a potential confounding variable; **citywide rent variable added as control** to account for noise introduced by variations in rent price.
 
 - **Strongest effect** was seen in the year immediately following a successful season.
-  
-- Large variation in rent prices from city to city introduces noise; **citywide rent variable added as control** to account for differences in rental markets.
+
+- **Limited availability of zip code specific rent price data** makes granular evaluation difficult, but team-level data shows interesting trends.
+
+- Results varied significantly from team to team; few teams independently reached statistical significant _(SDN, WAS, BAL, SDN)_
+
 ]
 
 
@@ -165,32 +174,18 @@ new_filtered_test %>%
 
 ---
 
-
 # Potential Improvements for Future Study
 
 ## Limited availability of zip code level rent data
-- Analysis was conducted with only 149 observations, making findings difficult to verify on a city level
+- Analysis was conducted with only 149 observations, making findings difficult to verify on a team level.
+
+## Zip code not a perfect proxy for surrounding neighborhood
+- Future study could use coordinate data to establish standard geoperimeter around stadiums.]
+
+## Additional control variables may improve validity
+- Examples include population size/market size, urban development, etc.
+
+## Isolate home wins as explanatory variable
+- Are rent prices more responsive when a team is successful in their home stadium?
 
 ## 
-
-
----
-# Hosting with ghpages
-
-You can host your slides remotely on github!
-
-1. Initiate and clone a repository.  
-2. Build and compile your slides.  
-3. CRITICAL: name the deck `index.html`.  
-4. Commit and push to github.  
-5. On github, go to Settings -> Pages.  
-6. Change "Branch" from none to master. Click save.  
-7. Find your slides at: `user_name.github.io/repo_name`
-
----
-# Useful Resources
-
-- Yihui Xie is the guru of all things markdown (and the author of the `knitr` package). His book [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)  is a great intro. See Chapters 4, 7, 9 for info on slide presentations.
-
-- Irene Vrbik also has an excellent [example slide deck](https://irene.vrbik.ok.ubc.ca/slides/NHSRxaringan.html#1). See her [markdown code on github](https://github.com/vrbiki/learning-xaringan/blob/master/NHSRxaringan.Rmd) to mimic all the little fancy things.
-
